# TermTools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_cmake.bat
.github/workflows/: ccpp.yml  ctest.yml  release_build_ci.yml  release_ci.yml  release_ci_test.yml
counter/: CMakeLists.txt  counter.c
etc/: install.bat
etc/test-files/: test.txt  testsums
include/: termtools.h  tt_version.h  tt_version.h.in
pager/: CMakelists.txt  README.md  pager.c
src/counter/: CMakeLists.txt  README.md  counter.c  counter_version.h  counter_version.h.in
src/fpeek/: CMakeLists.txt  README.md  fpeek.c  fpeek_version.h  fpeek_version.h.in
src/hashsum/: CMakelists.txt  README.md  hashsum.c  hashsum_version.h  hashsum_version.h.in
src/pager/: CMakelists.txt  README.md  pager.c  pager_version.h  pager_version.h.in
src/timer/: CMakelists.txt  README.md  timer.c  timer_version.h  timer_version.h.in
src/winfetch/: CMakelists.txt  README.md  winfetch.c  winfetch_version.h  winfetch_version.h.in
tim/: CMakelists.txt  README.md  tim.c
